--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=嘤嘤嘤
+spring.redis.host=localhost
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
 spring.redis.password=
 # 连接池最大连接数（使用负值表示没有限制）
-spring.redis.jedis.pool.max-active=200
+# spring.redis.jedis.pool.max-active=200
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
 # spring.redis.jedis.pool.max-wait=-1
 # 连接池中的最大空闲连接
@@ -16,3 +16,72 @@ spring.redis.jedis.pool.max-active=200
 # spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
 # spring.redis.timeout=3000
+# 连接池最大连接数(使用负值表示没有限制) 默认为8
+spring.redis.lettuce.pool.max-active=8
+# 连接池最大阻塞等待时间(使用负值表示没有限制) 默认为-1
+spring.redis.lettuce.pool.max-wait=-1ms
+# 连接池中的最大空闲连接 默认为8
+spring.redis.lettuce.pool.max-idle=8
+# 连接池中的最小空闲连接 默认为 0
+spring.redis.lettuce.pool.min-idle=0
+spring.cache.redis.time-to-live=1d
+
+#provider
+spring.kafka.bootstrap-servers=localhost:9092
+#每次批量发送消息的数量
+spring.kafka.producer.retries=0
+spring.kafka.producer.batch-size=16384
+#指定消息key和消息体的编解码方式
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+#指定默认消费者group id
+spring.kafka.consumer.group-id=consumer-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=100
+#指定消息key和消息体的编解码方式
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+#mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.druid.initial-size=3
+spring.datasource.druid.min-idle=5
+spring.datasource.druid.max-active=20
+spring.datasource.druid.max-wait=3000
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.validation-query="SELECT 1"
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.pool-prepared-statements=true
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=100
+spring.datasource.druid.use-global-data-source-stat=true
+spring.datasource.druid.filters=stat,wall,slf4j
+spring.datasource.druid.filter.slf4j.statement-executable-sql-log-enable=true
+spring.datasource.druid.stat-view-servlet.login-username=admin
+spring.datasource.druid.stat-view-servlet.login-password=admin
+spring.datasource.druid.stat-view-servlet.reset-enable=false
+spring.datasource.druid.stat-view-servlet.enabled=true
+spring.datasource.druid.stat-view-servlet.allow=
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*
+spring.datasource.druid.use-local-session-state=true
+spring.datasource.druid.web-stat-filter.session-stat-max-count=10
+
+#mybatis-plus
+mybatis-plus.mapper-locations=mapper/**/*.xml
+mybatis-plus.type-aliases-package=
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+
+
+#rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=demo
