--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,45 +1,46 @@
-# Redis数据库索引（默认为0）
+server.port=8090
+# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=0
-# Redis服务器地址
+# Redis\u670D\u52A1\u5668\u5730\u5740
 spring.redis.host=localhost
-# Redis服务器连接端口
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
 spring.redis.port=6379
-# Redis服务器连接密码（默认为空）
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
 spring.redis.password=
-# 连接池最大连接数（使用负值表示没有限制）
+# \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 # spring.redis.jedis.pool.max-active=200
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 # spring.redis.jedis.pool.max-wait=-1
-# 连接池中的最大空闲连接
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
 # spring.redis.jedis.pool.max-idle=10
-# 连接池中的最小空闲连接
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
 # spring.redis.jedis.pool.min-idle=0
-# 连接超时时间（毫秒）
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 # spring.redis.timeout=3000
-# 连接池最大连接数(使用负值表示没有限制) 默认为8
+# \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570(\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236) \u9ED8\u8BA4\u4E3A8
 spring.redis.lettuce.pool.max-active=8
-# 连接池最大阻塞等待时间(使用负值表示没有限制) 默认为-1
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4(\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236) \u9ED8\u8BA4\u4E3A-1
 spring.redis.lettuce.pool.max-wait=-1ms
-# 连接池中的最大空闲连接 默认为8
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5 \u9ED8\u8BA4\u4E3A8
 spring.redis.lettuce.pool.max-idle=8
-# 连接池中的最小空闲连接 默认为 0
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5 \u9ED8\u8BA4\u4E3A 0
 spring.redis.lettuce.pool.min-idle=0
 spring.cache.redis.time-to-live=1d
 
 #provider
 spring.kafka.bootstrap-servers=localhost:9092
-#每次批量发送消息的数量
+#\u6BCF\u6B21\u6279\u91CF\u53D1\u9001\u6D88\u606F\u7684\u6570\u91CF
 spring.kafka.producer.retries=0
 spring.kafka.producer.batch-size=16384
-#指定消息key和消息体的编解码方式
+#\u6307\u5B9A\u6D88\u606Fkey\u548C\u6D88\u606F\u4F53\u7684\u7F16\u89E3\u7801\u65B9\u5F0F
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-#指定默认消费者group id
+#\u6307\u5B9A\u9ED8\u8BA4\u6D88\u8D39\u8005group id
 spring.kafka.consumer.group-id=consumer-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-commit-interval=100
-#指定消息key和消息体的编解码方式
+#\u6307\u5B9A\u6D88\u606Fkey\u548C\u6D88\u606F\u4F53\u7684\u7F16\u89E3\u7801\u65B9\u5F0F
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
@@ -48,9 +49,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&character
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.druid.initial-size=3
-spring.datasource.druid.min-idle=5
+spring.datasource.druid.initial-size=5
 spring.datasource.druid.max-active=20
+spring.datasource.druid.min-idle=5
 spring.datasource.druid.max-wait=3000
 spring.datasource.druid.time-between-eviction-runs-millis=60000
 spring.datasource.druid.min-evictable-idle-time-millis=300000
@@ -77,6 +78,11 @@ spring.datasource.druid.web-stat-filter.session-stat-max-count=10
 mybatis-plus.mapper-locations=mapper/**/*.xml
 mybatis-plus.type-aliases-package=
 mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#\u4E00\u7EA7\u7F13\u5B58\u9ED8\u8BA4session
+#session\u4F1A\u5C06\u7F13\u5B58\u4F5C\u7528\u4E8E\u540C\u4E00\u4E2AsqlSesson\uFF0C\u800Cstatement\u4EC5\u9488\u5BF9\u4E00\u6B21\u67E5\u8BE2\uFF0C\u6240\u4EE5\uFF0Clocal-cache-scope: statement\u53EF\u4EE5\u7406\u89E3\u4E3A\u5173\u95ED\u4E00\u7EA7\u7F13\u5B58
+mybatis-plus.configuration.local-cache-scope=statement
+mybatis-plus.configuration.cache-enabled=true
 
 
 #rabbitmq
@@ -85,3 +91,14 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=demo
+#\u6D88\u606F\u53D1\u9001\u5230\u4EA4\u6362\u673A\u786E\u8BA4\u673A\u5236,\u662F\u5426\u786E\u8BA4\u56DE\u8C03
+#\u5982\u679C\u6CA1\u6709\u672C\u6761\u914D\u7F6E\u4FE1\u606F\uFF0C\u5F53\u6D88\u8D39\u8005\u6536\u5230\u751F\u4EA7\u8005\u53D1\u9001\u7684\u6D88\u606F\u540E\uFF0C\u751F\u4EA7\u8005\u65E0\u6CD5\u6536\u5230\u786E\u8BA4\u6210\u529F\u7684\u56DE\u8C03\u4FE1\u606F
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.publisher-confirms=true
+#\u6D88\u606F\u786E\u8BA4\u673A\u5236 --- \u662F\u5426\u5F00\u542F\u624B\u52A8\u786E\u8BA4\u6A21\u5F0F
+spring.rabbitmq.listener.direct.acknowledge-mode=manual
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
+
+#spring cache
+spring.cache.ehcache.config=classpath:conf/ehcache.xml
