--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,10 +49,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&character
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.druid.initial-size=5
-spring.datasource.druid.max-active=20
+spring.datasource.druid.initial-size=20
+spring.datasource.druid.max-active=100
 spring.datasource.druid.min-idle=5
-spring.datasource.druid.max-wait=3000
+#\u83B7\u53D6\u65B0\u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4
+spring.datasource.druid.max-wait=60000
 spring.datasource.druid.time-between-eviction-runs-millis=60000
 spring.datasource.druid.min-evictable-idle-time-millis=300000
 spring.datasource.druid.validation-query="SELECT 1"
@@ -73,6 +74,7 @@ spring.datasource.druid.web-stat-filter.enabled=true
 spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*
 spring.datasource.druid.use-local-session-state=true
 spring.datasource.druid.web-stat-filter.session-stat-max-count=10
+spring.datasource.druid.default-auto-commit=true
 
 #mybatis-plus
 mybatis-plus.mapper-locations=mapper/**/*.xml
@@ -98,6 +100,16 @@ spring.rabbitmq.publisher-confirms=true
 #\u6D88\u606F\u786E\u8BA4\u673A\u5236 --- \u662F\u5426\u5F00\u542F\u624B\u52A8\u786E\u8BA4\u6A21\u5F0F
 spring.rabbitmq.listener.direct.acknowledge-mode=manual
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
+# \u6D88\u8D39\u8005\u6BCF\u6B21\u4ECE\u961F\u5217\u83B7\u53D6\u7684\u6D88\u606F\u6570\u91CF
+spring.rabbitmq.listener.simple.prefetch=5
+# \u6D88\u8D39\u8005\u6570\u91CF(\u5373@RabbitListener\u5F00\u542F\u51E0\u4E2A\u7EBF\u7A0B\u53BB\u5904\u7406\u6570\u636E)
+spring.rabbitmq.listener.simple.concurrency=10
+# \u542F\u52A8\u6D88\u8D39\u8005\u6700\u5927\u6570\u91CF
+spring.rabbitmq.listener.simple.max-concurrency=20
+# \u91CD\u8BD5\u7B56\u7565\u76F8\u5173\u914D\u7F6E
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=2000
+spring.rabbitmq.listener.simple.retry.max-attempts=3
 
 
 #spring cache
