--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -114,3 +114,24 @@ spring.rabbitmq.listener.simple.retry.max-attempts=3
 
 #spring cache
 spring.cache.ehcache.config=classpath:conf/ehcache.xml
+
+#mail
+spring.mail.host=smtp.163.com
+spring.mail.username=javawxl@163.com
+spring.mail.password=NCJUNXDLGZRNCDRW
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.port=465
+spring.mail.properties.mail.display.sendmail=javawxl@163.com
+spring.mail.properties.mail.display.sendname=javawxl
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.from=javawxl@163.com
+
+#freemarker template
+spring.freemarker.cache=false
+spring.freemarker.suffix=.ftl
+spring.freemarker.charset=UTF-8
+spring.freemarker.template-loader-path=classpath:/templates/
